ajuste section um

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
     </div>
 
-    <div data-aos="fade-up"  class="div-section-dois">
+    <div class="div-section-dois">
         <p id="anchor2" class="titulo-servico-laranja">Conheça nossos serviços</p>
         <br><br>
         <p class="legenda-servico-branco">Confira abaixo alguns dos serviços oferecidos pela optimer</p>
