ajuste imagem principal

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
         </div>
         <div class="div-img-principal">
-            <img class="img-principal" src="img-principal22.png" alt="" height="600px">
+            <img class="img-principal" src="img-principal22.png" alt="">
         </div>     
     </div>
     
