Mudando número de contato

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <li><a class="menu-item" href="#anchor2">Serviços</a></li>
             <li><a class="menu-item" href="#anchor3">contato</a></li> 
         </ul>
-        <a class="bt-um" href="https://wa.me/5561991281059">ENTRE EM CONTATO</a>
+        <a class="bt-um" href="https://api.whatsapp.com/send?phone=556133555150">ENTRE EM CONTATO</a>
     </nav>
     <hr class="linha">
     
@@ -50,8 +50,8 @@
             </p>
             <br><br>
             <div class="botoes">
-                <a class="bt-dois" href="https://wa.me/5561991281059">Entre em contato</a>
-                <div class="bt-saiba-mais"><a href="https://wa.me/5561991281059"><img src="bt-saiba-mais.svg" alt=""></a></div>
+                <a class="bt-dois" href="https://api.whatsapp.com/send?phone=556133555150">Entre em contato</a>
+                <div class="bt-saiba-mais"><a href="https://api.whatsapp.com/send?phone=556133555150"><img src="bt-saiba-mais.svg" alt=""></a></div>
             </div>
         </div>
         <div class="div-img-principal">
@@ -193,7 +193,7 @@
                     <p class="legenda-suporte">Aqui na Optimer oferecemos o melhor suporte do mercado para sua empresa.</p>
                 </div>
                 <div>
-                    <a class="bt-suporte" href="https://wa.me/5561991281059">Entre em contato</a>
+                    <a class="bt-suporte" href="https://api.whatsapp.com/send?phone=556133555150">Entre em contato</a>
                 </div>
             </div>
             <img class="img-suporte" src="suporte.png" alt="">
@@ -232,7 +232,7 @@
     <div class="blog" data-aos="fade-right">
         <div class="texto-blog">
             <p class="titulo-blog">Tire suas dúvidas</p>
-            <a class="bt-blog" href="https://wa.me/5561991281059">Entre em contato</a>
+            <a class="bt-blog" href="https://api.whatsapp.com/send?phone=556133555150">Entre em contato</a>
         </div>
         <div class="card-blog">
             <div class="cartao-blog">
@@ -318,7 +318,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#anchor">Sobre nós</a></li>
                 <li><a href="#anchor2">Serviços</a></li>
-                <li><a href="https://wa.me/5561991281059">Contato</a></li>
+                <li><a href="https://api.whatsapp.com/send?phone=556133555150">Contato</a></li>
             </ul>
         </div>
         <div class="footer-tres">
