ajustes section um OK, ajustes section dois OK

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PQ7FJJ54"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
+    <!-- <a href="index.html"><img class="topo" src="seta-cinza-2.png" alt=""></a> -->
+
     
-    <a href="index.html"><img class="topo" src="seta-cinza-2.png" alt=""></a>
     <nav>
         <a href=""><div class="logo"><img class="logo" src="logo-principal.png" alt=""></div></a>
 
@@ -41,17 +42,14 @@
     
     <div class="section-um">
         <div class="texto-card">
-            <p class="titulo-um">Assessoria <br> contábil OPTIMER</p>
+            <p class="titulo-um">OPTIMER transforma sua contabilidade empresarial</p>
             <br>
-            <p class="texto-um">Nosso escritório contábil é dedicado em entregar 
-            com qualidade serviços especializados para empresas
-            dos mais complexos ramos, Oferecendo um modelo de negócio 
-            favorável para o seu nicho.
-            </p>
+            <p class="texto-um">Vá além do básico e descubra soluções completas que impulsionam seu sucesso. Economize na sua contabilidade e invista no seu negócio.</p>
             <br><br>
             <div class="botoes">
                 <a class="bt-dois" href="https://api.whatsapp.com/send?phone=556133555150">Entre em contato</a>
-                <div class="bt-saiba-mais"><a href="https://api.whatsapp.com/send?phone=556133555150"><img src="bt-saiba-mais.svg" alt=""></a></div>
+                <!-- <div class="bt-saiba-mais"><a href="https://api.whatsapp.com/send?phone=556133555150"><img src="bt-saiba-mais.svg" alt=""></a></div> -->
+                <a class="bt-fale-conosco" href="">Fale conosco</a>
             </div>
         </div>
         <div class="div-img-principal">
@@ -89,39 +87,50 @@
     <div class="div-section-dois">
         <p id="anchor2" class="titulo-servico-laranja">Conheça nossos serviços</p>
         <br><br>
-        <p class="legenda-servico-branco">Confira abaixo alguns dos serviços oferecidos pela optimer</p>
         <div class="servico">
-            <div class="card-servico">
-                <div>
-                    <img src="carregamento.gif" alt="" class="img-servico" width="50px">
-                    <p class="titulo-servico">Departamento pessoal</p>
-                    <br>
-                    <p class="texto-servico">Orientação e controle de aplicação dos preceitos da
-                        Consolidação das Leis do Trabalho  sendo responsável por cuidar de todas as questões relacionadas aos colaboradores.
-                    </p>
-                </div>
-            </div>
+
+
             <div class="card-servico">
                 <div>
                     <img src="engrenagem.gif" alt="" class="img-servico" width="50px">
-                    <p class="titulo-servico">Departamento empresarial</p>
+                    <p class="titulo-servico">Consultoria Empresarial</p>
                     <br>
-                    <p class="texto-servico">O atendimento inicial de um cliente em potencial para
-                        nossa empresa se faz através de um profissional do
-                        departamento societário.
-                    </p>
+                    <p class="texto-servico">Com análises estratégicas e orientação especializada, ajudamos a otimizar processos, aumentar a competitividade e alcançar metas de crescimento.</p>
                 </div>
             </div>
             <div class="card-servico">
                 <div>
                     <img src="prancheta.gif" alt="" class="img-servico" width="50px">
-                    <p class="titulo-servico">Departamento contábil</p>
+                    <p class="titulo-servico">Consultoria Contábil</p>
                     <br>
-                    <p class="texto-servico">Faz a verificação dos dados e a análise dos fatos
-                        contábeis que são fundamentais para uma correta
-                        tomada de decisões no processo de planejamento
-                        empresarial..
-                    </p>
+                    <p class="texto-servico">Oferecemos insights precisos por meio de relatórios financeiros detalhados, facilitando a tomada de decisões embasadas e assertivas.</p>
+                </div>
+            </div>
+            <div class="card-servico">
+                <div>
+                    <img src="carregamento.gif" alt="" class="img-servico" width="50px">
+                    <p class="titulo-servico">Registro de Marca</p>
+                    <br>
+                    <p class="texto-servico">Protegemos sua propriedade intelectual com processos ágeis e seguros de registro de marca, fortalecendo a reputação e valorizando seu negócio no mercado.</p>
+                </div>
+            </div>
+
+
+            <div class="card-servico">
+                <div>
+                    <img src="internet.gif" alt="" class="img-servico">
+                    <p class="titulo-servico">Escritório virtual</p>
+                    <br>
+                    <p class="texto-servico">Com nossa plataforma digital, proporcionamos flexibilidade e praticidade, permitindo que você gerencie seu negócio de forma remota e eficiente.</p>
+                </div>
+            </div>
+
+            <div class="card-servico">
+                <div>
+                    <img src="certo.gif" alt="" class="img-servico" width="50px">
+                    <p class="titulo-servico">Imposto de renda</p>
+                    <br>
+                    <p class="texto-servico">Nossa expertise em planejamento tributário garante uma gestão eficiente dos impostos, maximizando retornos e evitando riscos fiscais.</p>
                 </div>
             </div>
             <div class="card-servico">
@@ -129,32 +138,7 @@
                     <img src="caderno-verificado.gif" alt="" class="img-servico" width="50px">
                     <p class="titulo-servico">Departamento fiscal</p>
                     <br>
-                    <p class="texto-servico">Conte com eles para orientação das constantes
-                        alterações na legislação tributária que causam grande
-                        impacto no planejamento tributário das empresas.
-                    </p>
-                </div>
-            </div>
-            <div class="card-servico">
-                <div>
-                    <img src="certo.gif" alt="" class="img-servico" width="50px">
-                    <p class="titulo-servico">Imposto de renda</p>
-                    <br>
-                    <p class="texto-servico">Disponibilizam uma dedicação especial no ato da
-                        elaboração de sua Declaração de Imposto de Renda
-                        Pessoa Física
-                    </p>
-                </div>
-            </div>
-            <div class="card-servico">
-                <div>
-                    <img src="internet.gif" alt="" class="img-servico">
-                    <p class="titulo-servico">Escritório virtual</p>
-                    <br>
-                    <p class="texto-servico">Escritório Virtual é a solução para quem busca registrar
-                        e legalizar sua atividade de forma simples, rápida e
-                        prática.
-                    </p>
+                    <p class="texto-servico">Garantimos conformidade legal e eficiência na gestão fiscal, reduzindo custos e melhorando a saúde financeira da empresa.</p>
                 </div>
             </div>
         </div>
