--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
 
     <div class="div-section-dois">
         <p id="anchor2" class="titulo-servico-laranja">Conheça nossos serviços</p>
-        <br><br>
+        <br>
+        <p class="legenda-servico-branco">Confira abaixo alguns dos serviços oferecidos pela optimer</p>
         <div class="servico">
 
 
