ajuste section um mobile, ajuste section serviços, ajuste section blog.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
         <div class="texto-card">
             <p class="titulo-um">OPTIMER transforma sua contabilidade empresarial</p>
             <br>
-            <p class="texto-um">Vá além do básico e descubra soluções completas que impulsionam seu sucesso. Economize na sua contabilidade e invista no seu negócio.</p>
+            <div class="box-texto-um">
+                <p class="texto-um">Vá além do básico e descubra soluções completas que impulsionam seu sucesso. Economize na sua contabilidade e invista no seu negócio.</p>
+            </div>
             <br><br>
             <div class="botoes">
                 <a class="bt-dois" href="https://api.whatsapp.com/send?phone=556133555150">Entre em contato</a>
